<resources>
    <string name="app_name">Easy Math</string>
    <string name="common_compare_numbers">Compare</string>
    <string name="common_order_numbers">Order</string>
    <string name="common_compose_numbers">Compose</string>
    <string name="common_toggle_locale">中文</string>
    <string name="common_unexpected_error">Oops! Something went wrong. Please ask an adult to contact the developer.</string>
    <string name="common_submit">Submit</string>
    <string name="common_score">Score: </string>
    <string name="common_retry">Retry</string>
    <string name="common_scores">Scores</string>
    <string name="compare_tap_bigger_num">Tap the bigger number</string>
    <string name="compare_tap_smaller_num">Tap the smaller number</string>
    <string name="compare_num_bigger_correct_answer">Great job! You picked the bigger number!</string>
    <string name="compare_num_bigger_wrong_answer">Oops! That wasn’t the bigger number.</string>
    <string name="compare_num_smaller_correct_answer">Great job! You picked the smaller number!</string>
    <string name="compare_num_smaller_wrong_answer">Oops! That wasn’t the smaller number.</string>
    <string name="order_arrange_in_ascending">Put numbers in ascending order</string>
    <string name="order_arrange_in_descending">Put numbers in descending order</string>
    <string name="order_ascending_correct_answer">Great job! The numbers are in ascending order!</string>
    <string name="order_ascending_wrong_answer">Oops! The numbers are not in ascending order.</string>
    <string name="order_descending_correct_answer">Great job! The numbers are in descending order!</string>
    <string name="order_descending_wrong_answer">Oops! The numbers are not in descending order.</string>
    <string name="order_arrange_all_numbers">Please arrange all the numbers before you submit!</string>
    <string name="compose_instruction">Make the big number</string>
    <string name="compose_pick_two_nums">Please pick two numbers.</string>
    <string name="compose_correct_answer">Good job! You made the number!</string>
    <string name="compose_wrong_answer">Oops! These don’t make the big number.</string>
    <string name="score_title">My High Score Board</string>
    <string name="score_compare_num">Compare: </string>
    <string name="score_order_num">Order: </string>
    <string name="score_compose_num">Compose: </string>
    <string name="score_delete_scores">Reset Scores</string>
</resources>