<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_with_opacity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/back_button_background"
                android:scaleType="centerInside"
                android:src="@drawable/left_arrow" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_score"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/score_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="24sp" />
            </LinearLayout>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/compose_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/compose_instruction"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/compose_target_num_card"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="4dp"
            android:background="#ADD8E6"
            android:gravity="center" />

        <LinearLayout
            android:id="@+id/compose_slots_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="#808080" />

            <FrameLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="#808080" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/compose_cards_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:divider="@drawable/spacing_divider"
            android:gravity="center_horizontal"
            android:minHeight="60dp"
            android:orientation="horizontal"
            android:showDividers="middle">

            <!-- Number cards go here -->
            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#ADD8E6"
                android:gravity="center" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#ADD8E6"
                android:gravity="center" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#ADD8E6"
                android:gravity="center" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#ADD8E6"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <info.hoang8f.widget.FButton
                android:id="@+id/retry_btn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/common_retry"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:visibility="gone" />

            <info.hoang8f.widget.FButton
                android:id="@+id/compose_submit_btn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/common_submit"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>